--- a/src/components/MenuLateral/MenuLateral.css
+++ b/src/components/MenuLateral/MenuLateral.css
@@ -1,10 +1,9 @@
-/* MENU */
 *{
   margin:0px;
   padding:0px;
   font-family: Roboto;
+  font-weight: 500;
 }
-
 .img-izq {
   position: absolute;
   left: 1.54%;
@@ -12,9 +11,18 @@
   width: 65px;
   top: -44px;
 }
-
 .lateralmenu {
   position: absolute;
+  left: 1.54%;
+  right: 71.48%;
+  top: 1.69%;
+  bottom: 90.76%;
+  width: 60px; 
+}
+.lateralmenu {
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   display: block;
   margin-top: 1rem;
@@ -22,7 +30,6 @@
   align-items: stretch; 
   transform: rotate(360deg);
 }
-  
 .button1 {
   position: absolute;
   width: 340px;
@@ -32,14 +39,12 @@
   background: #022939;
   transform: rotate(-90deg);
   color: #FFFFFF;
-  
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 23px;
 }
-  
 .button2 {
   position: absolute;
   width: 340px;
@@ -49,11 +54,9 @@
   background: #C4C4C4;
   transform: rotate(-90deg);
   color: #022939;
-
   font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 20px;
-line-height: 23px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 23px;
 }
-  
