--- a/src/components/MenuPostres/MenuPostres.css
+++ b/src/components/MenuPostres/MenuPostres.css
@@ -3,7 +3,7 @@
     width: 167px;
     height: 198px;
     left: 136px;
-    top: 417px;
+    top: 430px;
     background: #C4C4C4;
 }
 table {
@@ -25,11 +25,11 @@ table {
     align-items: flex-start;
     font-family: Roboto;
     font-style: normal;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 18px;
     line-height: 21px;
 /* identical to box height */
-    letter-spacing: 0.05em;
+    letter-spacing: 0.10em;
     color: #FFFFFF;
 }
 .btnDetalleMenuDos{
@@ -43,7 +43,7 @@ table {
     box-sizing: border-box;
     border-radius: 10px;
      font-family: Roboto;
-    font-style: normal;
+    font-style: bold;
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;  
